--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,12 @@
 title: 修行的魏玉科
 email: huoen.wyk@taobao.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+   爱玩桌上足球,爱敲代码.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://weiyuke.net" # the base hostname & protocol for your site
+url: "http://blog.weiyuke.net" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
 github_username: goodpress 
 
 # Build settings
-markdown: kramdown
+#markdown: kramdown
+markdown: redcarpet
