--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: 修行的魏玉科
+title: 
 email: huoen.wyk@taobao.com
 description: > # this means to ignore newlines until "baseurl:"
    爱玩桌上足球,爱敲代码.
