--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: 
+title:修行的魏玉科 
 email: huoen.wyk@taobao.com
 description: > # this means to ignore newlines until "baseurl:"
-   爱玩桌上足球,爱敲代码.
+   爱玩桌上足球,爱敲代码.厌恶心灵鸡汤
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://blog.weiyuke.net" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
